# Vector-Search-Engine-Demo

./: .gitignore  Cargo.toml  README.md  build.rs  vectors.wal  vectors_50052.wal
proto/: vector_db.proto  vectordb.proto
src/: lib.rs  wal.rs
src/index/: distance.rs  hnsw.rs  mod.rs  tests.rs
src/network/: mod.rs
