[package]
name = "my_vector_db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memmap2 = "0.9"
ndarray = { version = "0.15", features = ["serde"] }
crc32fast = "1.3"
rand = "0.8"
bytes = "1.5"
prost-types = "0.12"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10"
protoc-bin-vendored = "3.0"
